--- a/common/.config/emacs/init.el.org
+++ b/common/.config/emacs/init.el.org
@@ -317,8 +317,13 @@ Install and configure =eat= as a terminal emulator in Emacs.
     (defun jj/eshell-quit-or-delete-char (arg)
       (interactive "p")
       (if (and (eolp) (looking-back eshell-prompt-regexp))
-            (eshell-life-is-too-much)
+          (eshell-life-is-too-much)
         (delete-forward-char arg)))
+    (defun eshell/manage-configs (arg)
+      (let ((dir (eshell/pwd)))
+       (eshell/cd "~/.dotfiles")
+       (compile (concat "make " arg))
+       (eshell/cd dir)))
     :config
     (eat-eshell-mode)
     (setq eshell-visual-commands '())
