--- a/macos.local/flake/home/scripts/yt-to-rss.org
+++ b/macos.local/flake/home/scripts/yt-to-rss.org
@@ -4,5 +4,5 @@ Quick script to get the RSS link for a YouTube channel so I don't have to visit 
 #+begin_src sh
   #!/bin/sh
 
-  curl "$1" 2> /dev/null | pup 'link[title="RSS"] attr{href}'
+  /usr/bin/curl "$1" 2> /dev/null | /usr/bin/env pup 'link[title="RSS"] attr{href}'
 #+end_src
