--- a/common/.config/emacs/init.el.org
+++ b/common/.config/emacs/init.el.org
@@ -312,11 +312,8 @@ Install a better PDF viewer than =DocView=.
 
 Install and configure =eat= as a terminal emulator in Emacs with =eshell= as a shell.
 #+begin_src emacs-lisp
-  (use-package eat
+  (use-package eshell
     :init
-    (setopt eat-kill-buffer-on-exit t)
-    (eat-eshell-mode)
-
     ;; Overwrite a default function that makes the prompt editable for some reason
     (defun eshell-emit-prompt ()
      "Emit a prompt if eshell is being used interactively."
@@ -340,7 +337,12 @@ Install and configure =eat= as a terminal emulator in Emacs with =eshell= as a s
                rear-nonsticky (read-only field font-lock-face)))
           prompt)
          (eshell-interactive-filter nil prompt)))
-     (run-hooks 'eshell-after-prompt-hook))
+     (run-hooks 'eshell-after-prompt-hook)))
+
+  (use-package eat
+    :init
+    (setopt eat-kill-buffer-on-exit t)
+    (eat-eshell-mode)
 
     (defun jj/shorten-path-str (path)
      (let* ((components (split-string (replace-regexp-in-string (getenv "HOME") "~" path) "/"))
