--- a/common/.config/emacs/init.el.org
+++ b/common/.config/emacs/init.el.org
@@ -312,7 +312,7 @@ Install a better PDF viewer than =DocView=.
 
 Install and configure =eat= as a terminal emulator in Emacs with =eshell= as a shell.
 #+begin_src emacs-lisp
-  (require 'eshell)
+  (require 'em-prompt)
   :init
   ;; Overwrite a default function that makes the prompt editable for some reason
   (defun eshell-emit-prompt ()
