--- a/common/.config/emacs/init.el.org
+++ b/common/.config/emacs/init.el.org
@@ -458,7 +458,8 @@ Set up =flycheck= and =flyspell= for syntax and spell checking respectively.
     :config
     (add-hook 'after-init-hook #'global-flycheck-mode))
 
-  (eval-after-load "flyspell" '(add-hook 'text-mode-hook #'flyspell-mode))
+  (with-eval-after-load 'flyspell
+    (add-hook 'text-mode-hook #'flyspell-mode))
 
   (use-package flyspell-correct
     :after flyspell
