--- a/macos.local/flake/home/programs/core.nix.org
+++ b/macos.local/flake/home/programs/core.nix.org
@@ -23,6 +23,7 @@ Import configurations for programs and install programs with no configuration.
       cmake
       cmake-language-server
       curl
+      dasel
       dos2unix
       eza
       ffmpeg
