--- a/macos.local/flake/system/homebrew.nix.org
+++ b/macos.local/flake/system/homebrew.nix.org
@@ -53,6 +53,7 @@ Set up Homebrew. I disable the quarantine automatically and ensure that the stat
         "poppler"
 
         # required by emacs-plus@30
+        "gcc"
         "imagemagick"
         "jansson"
         "jpeg"
