--- a/macos.local/flake/home/core.nix.org
+++ b/macos.local/flake/home/core.nix.org
@@ -29,7 +29,7 @@ Set up home manager for my user account and import submodules. Define my user as
 
     home.sessionSearchVariables = {
       MANPATH = [
-        "/Library/Developer/CommandLineTools/SDKs/macOSX13.0.sdk/usr/share/man"
+        "/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/share/man"
         "/usr/share/man"
       ];
     };
